--- a/backend_server/package.json
+++ b/backend_server/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "cors": "^2.8.5"
+    "mysql": "^2.18.1"
   }
 }
